--- a/static/css/navbar.css
+++ b/static/css/navbar.css
@@ -13,7 +13,7 @@ body {
 }
 /* Navigation */
 .navbar {
-    background: #93441A;
+    background: #005F6B;
     color: white;
     padding: 1rem 0;
     box-shadow: 0 2px 5px rgba(0,0,0,0.1);
@@ -29,7 +29,7 @@ body {
 }
 
 .navbar a {
-    color: white;
+    color: black;
     text-decoration: none;
     transition: color 0.3s;
 }
@@ -47,7 +47,7 @@ body {
     margin-left: 15px;
     padding: 5px 10px;
     border-radius: 3px;
-    background: #B67332;
+    background: #ffd700;
 }
 
 .nav-links a:hover {
