--- a/static/css/admin/styleAdmin.css
+++ b/static/css/admin/styleAdmin.css
@@ -217,11 +217,7 @@ footer {
     padding: 15px 20px;
     box-shadow: 0 -6px 18px rgba(0, 0, 0, 0.25);
     font-size: 0.9rem;
-<<<<<<< HEAD
-    animation: bounce 2s infinite;
-=======
     animation: bounce 4s infinite;
->>>>>>> origin/main
 }
 
 @keyframes bounce {
@@ -338,8 +334,6 @@ footer a:hover {
         font-size: 12px;
     }
 }
-<<<<<<< HEAD
-=======
 
 /* Container principal */
 .stats-container {
@@ -614,32 +608,15 @@ canvas {
 
 
 .modal {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0,0,0,0.5);
-    display: flex;
-    justify-content: center;
+    display: none; /* IMPORTANT */
     align-items: center;
+    justify-content: center;
 }
 
-.modal-content {
-    background: white;
-    padding: 20px;
-    border-radius: 8px;
-    width: 400px;
-    animation: fadeIn 0.3s;
-}
-
-.close {
-    float: right;
-    font-size: 22px;
-    cursor: pointer;
+.modal.show {
+    display: flex;
 }
 
 @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
 
 
->>>>>>> origin/main
